# domain_handler

./: .gitignore  Cargo.toml
src/: commands.rs  main.rs  service.rs  sync_semaphore.rs
src/process/: dns_checker.rs  domains.rs  duck_communicate.rs  file_lock.rs  logger.rs  loop_proc.rs  mod.rs  notifier.rs  rutas.rs  ubuntu_service.rs
